--- a/templates/base.html
+++ b/templates/base.html
@@ -43,13 +43,18 @@
                     {% endif %}
               </div>
           </div>
-          <div class="d-flex gap-1" role="login">
+          <div class="d-flex gap-1" role="navigation">
+              {% if user.role == 'ADMIN' %}
+                  <a class="btn btn-secondary gear " role="button" aria-disabled="true" href="{% url 'perfil' %}"><i
+                    class="bi bi-gear" style="color: black;"></i></a>
+                  <a class="btn btn-secondary add_user " role="button" aria-disabled="true" href="{% url 'perfil' %}"><i
+                    class="bi bi-person-add" style="color: black;"></i></a>
+              {% endif %}
             {% if user.is_authenticated %}
             <a class="btn btn-secondary cart " role="button" aria-disabled="true" href="{% url 'carrinho' %}"><i
                 class="bi bi-bag" style="color: black;"></i></a>
             <a class="btn btn-primary " role="button" aria-disabled="true"
                 href="{% url 'logout' %}?next={{ request.path }}">Logout</a>
-
             {% else %}
             <a class="btn btn-secondary cart " role="button" aria-disabled="true" href="{% url 'carrinho' %}"><i
                     class="bi bi-bag" style="color: black;"></i></a>
