--- a/templates/perfil/perfil.html
+++ b/templates/perfil/perfil.html
@@ -11,6 +11,7 @@
             <div class="col-lg-12">
               <!-- <span>Who What Wear</span> -->
               <h1 class="m-0 p-0 title-h1 text-uppercase ">{{name}}</h1>
+                <h2 class="m-0 p-0 title-h2 text-uppercase" > {{ role }}</h2>
             </div>
             <div class="selects py-3 gap-3 d-flex flex-column">
               <div class="col-sm-12 col-lg-12">
