--- a/templates/registration/cadastro.html
+++ b/templates/registration/cadastro.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 {% block title %}Login{% endblock %}
 {% block content %}
 
@@ -26,26 +27,18 @@
                 <form method="post" novalidate>
                   {% csrf_token %}
                     {% for field in form %}
-                        <p style="  display: flex;
-                                    flex-direction: column;">
-                            {% if field.errors %}
-                            <ul class="">
-                                {% for error in field.errors %}
-                                <li>{{ error }}</li>
-                                {% endfor %}
-                            </ul>
-                            {% endif %}
-                                {{ field.label_tag }} <br>
-                            {{ field }}
-                        </p>
+                        <div class="form-group mb-3">
+                            <label class="form-label">
+                                {{ field.label_tag }}
+                            </label>
+                            {{ field.erros }}
+                            {% render_field field class="form-control" %}
+                        </div>
                     {% endfor %}
                   <div class="pb-4 gap-3">
-
                     <button type="submit" class="btn btn-outline-danger w-100">Criar nova conta</button>
                   </div>
-
                 </form>
-
               </div>
             </div>
             <div class="col-lg-6 d-flex align-items-center gradient-custom-2">
