Funcionalidade de admin terminada

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,10 @@
                   <a class="btn btn-secondary add_user " role="button" aria-disabled="true" href="{% url 'add_user' %}"><i
                     class="bi bi-person-add" style="color: black;"></i></a>
               {% endif %}
+                {% if user.role == 'FUNCIONARIO' %}
+                  <a class="btn btn-secondary gear " role="button" aria-disabled="true" href="{% url 'perfil' %}"><i
+                    class="bi bi-gear" style="color: black;"></i></a>
+                {% endif %}
             {% if user.is_authenticated %}
             <a class="btn btn-secondary cart " role="button" aria-disabled="true" href="{% url 'carrinho' %}"><i
                 class="bi bi-bag" style="color: black;"></i></a>
