--- a/templates/add_user/add_user.html
+++ b/templates/add_user/add_user.html
@@ -1,71 +1,84 @@
-{% extends 'base.html' %} {% block title %}Admin{% endblock %} {% block content %} {% load static %}
-<main class="container d-flex justify-content-center align-items-center py-5">
-  <div class="col-lg-12 border p-3 main-section bg-white border-0">
-    <div class="row m-0">
-      <div class="col-lg-5 left-side-product-box pb-3 border-0">
-        <img src="/media/clientes/{{ image }}" class="border p-3 border-0" alt="{{ nome }}"/>
-      </div>
-      <div class="col-lg-7 d-flex align-items-center">
-        <div class="right-side-pro-detail border p-3 m-0 border-0">
-          <form class="row">
-            <div class="col-lg-12">
-              <!-- <span>Who What Wear</span> -->
-              <h1 class="m-0 p-0 title-h1 text-uppercase ">{{name}}</h1>
-                <h2 class="m-0 p-0 title-h2 text-uppercase" > {{ role }}</h2>
-            </div>
-            <div class="selects py-3 gap-3 d-flex flex-column">
-              <div class="col-sm-12 col-lg-12">
-                <h6 class="h6-selects">Email:</h6>
-                <div class="">
-                  <input  class="form-control" type="email" alt="{{ email }}" name="email" value="{{ email }}" disabled/>
-                </div>
+{% extends 'base.html' %}
+{% load widget_tweaks %} {% block title %}Admin{% endblock %} {% block content %} {% load static %}
+<main class="container py-5 d-flex justify-content-center">
+    <div class="card w-100" style="max-width: 48rem;">
+        <div class="card-header">
+            <H1>Cadastre funcionários</H1>
+        </div>
+      <div class="card-body">
+            <form method="post" novalidate action="{% url 'add_user' %}" enctype="multipart/form-data">
+              {% csrf_token %}
+                {% for field in form %}
+                    <div class="form-group mb-3">
+                        <label class="form-label">
+                            {{ field.label_tag }}
+                        </label>
+                        {{ field.errors }}
+
+                        {% render_field field class="form-control" %}
+                    </div>
+                {% endfor %}
+                {{ form.non_field_errors  }}
+              <div class="pb-4 gap-3">
+                <button type="submit" class="btn btn-outline-danger w-100">Adicionar novo funcionario</button>
               </div>
-            </div>
-            <div class="col-lg-12 mt-3">
-              <div class="row">
-                <div class>
-                  <a href="{% url 'logout' %}" type="submit" class="btn btn-danger w-100 btn-add-to-cart border-0 py-3">Deslogar</a>
-                </div>
+            </form>
+        </div>
+    </div>
+
+{% comment %}  <div class=" border p-3 main-section bg-white border-0">
+    <div class=" m-0">
+      <div class=" align-items-center">
+        <div class="border p-3 m-0 border-0">
+          <H1>Cadastre funcionários</H1>
+            <form method="post" novalidate action="{% url 'add_user' %}" enctype="multipart/form-data">
+              {% csrf_token %}
+                {% for field in form %}
+                    <div class="form-group mb-3">
+                        <label class="form-label">
+                            {{ field.label_tag }}
+                        </label>
+                        {{ field.errors }}
+
+                        {% render_field field class="form-control" %}
+                    </div>
+                {% endfor %}
+                {{ form.non_field_errors  }}
+              <div class="pb-4 gap-3">
+                <button type="submit" class="btn btn-outline-danger w-100">Adicionar novo funcionario</button>
               </div>
-            </div>
-          </form>
+            </form>
         </div>
       </div>
     </div>
-  </div>
+  </div>{% endcomment %}
 </main>
 <section class="container-fluid p-3 py-5">
   <div class="container-fluid d-inline-flex justify-content-between align-items-center py-5">
     <div>
       <div>
-        <h1 class="title-h1">SEUS PEDIDOS PASSADOS</h1>
-        <p class="section-p">agradecemos por comprar conosco.</p>
+        <h1 class="title-h1">Funcionários cadastrados</h1>
       </div>
     </div>
   </div>
   <div class="container-fluid py-2 scroll">
     <div class="row flex-row flex-nowrap gap-5">
-      {% for pedido in pedidos_pagos %}
-          <div class="card position-relative border-success" style="width: 18rem;" id="{{pedido.carrinho}}">
+      {% for funcionario in funcionarios %}
+          <div class="card position-relative border-success" style="width: 18rem;" id="{{funcionario.pk}}">
               <div class="card-header text-success">
-                <h5 class="card-title">Preço total: {{ pedido.preco_total }}</h5>
+                <h5 class="card-title">Nome: {{ funcionario.username }}</h5>
               </div>
              <ul class="list-group list-group-flush">
                 <li class="list-group-item">
                     <div class="mb-3">
-                        <label class="form-label" for="startDate">Data do Pedido: </label>
-                        <input id="startDate" class="form-control" type="text" value="{{ pedido.data_pedido }}" disabled/>
-                    </div>
-                </li>
-                <li class="list-group-item">
-                    <div class="mb-3">
-                        <label class="form-label"class="form-label" for="startDate">Devolução: </label>
-                        <input id="startDate" class="form-control" type="text" value="{{ pedido.data_devolucao }}" disabled/>
+                        <label class="form-label" for="startDate">Data de Cadastro: </label>
+                        <input id="startDate" class="form-control" type="text" value="{{ funcionario.date_joined }}" disabled/>
                     </div>
                 </li>
              </ul>
-              <div class="card-footer">
-                  <a href="whatsapp://send?text=Hello World!&phone=+5585992116661" class="btn btn-success w-100">Whatsapp <i class="bi bi-whatsapp"></i></a>
+              <div class="card-footer d-flex gap-1">
+                  <a href="whatsapp://send?text=Hello World!&phone=+5585992116661" class="btn btn-success w-100">Ver mais</a>
+                  <a href="{% url 'rem_user' funcionario.pk %}" class="btn btn-danger w-100">Deletar <i class="bi bi-trash"></i></a>
               </div>
           </div>
       {% endfor %}
