--- a/templates/roupa/roupa.html
+++ b/templates/roupa/roupa.html
@@ -42,6 +42,11 @@
             </div>
             <div class="col-lg-12">
               <h1 class="m-0 p-0 price-pro">{{preco}}</h1>
+                {% if roupa.quantidade <= 0 %}
+                    <h4 class="m-0 p-0">Não disponível em estoque</h4>
+                    {% else %}
+                    <h4 class="m-0 p-0">{{roupa.quantidade}} em estoque</h4>
+                {% endif %}
                 <p>
                     <small>não somado {{roupa.precoLavagem}} reais de lavagem</small>
                 </p>
@@ -82,7 +87,7 @@
                     <p class="card-text">{{ relacionado.descricao }}</p>
                 </div>
                 <div class="card-footer">
-                     <a href="{% url 'roupa' roupa.id %}" class="btn btn btn btn-danger w-100">Ver mais</a>
+                     <a href="{% url 'roupa' relacionado.id %}" class="btn btn btn btn-danger w-100">Ver mais</a>
                 </div>
             </div>
       {% endfor %}
