--- a/templates/funcionario/funcionario.html
+++ b/templates/funcionario/funcionario.html
@@ -14,7 +14,7 @@
             <div class="">
               <div class="card-body p-md-5 mx-md-4">
                 <H1>Cadastre uma roupa</H1>
-                <form method="post" enctype="multipart/form-data">
+                <form method="post" action="{% url 'funcionario' %}" enctype="multipart/form-data">
                   {% csrf_token %}
                     {% for field in form %}
                         <div class="form-group mb-3">
