--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
               {% if user.role == 'ADMIN' %}
                   <a class="btn btn-secondary gear " role="button" aria-disabled="true" href="{% url 'funcionario' %}"><i
                     class="bi bi-gear" style="color: black;"></i></a>
-                  <a class="btn btn-secondary add_user " role="button" aria-disabled="true" href="{% url 'add_user' %}"><i
+                  <a class="btn btn-secondary add_user " role="button" aria-disabled="true" href="{% url 'add_funcionario' %}"><i
                     class="bi bi-person-add" style="color: black;"></i></a>
               {% endif %}
                 {% if user.role == 'FUNCIONARIO' %}
@@ -62,7 +62,7 @@
             {% else %}
             <a class="btn btn-secondary cart " role="button" aria-disabled="true" href="{% url 'carrinho' %}"><i
                     class="bi bi-bag" style="color: black;"></i></a>
-            <a class="btn btn-primary " role="button" aria-disabled="true" href="{% url 'login' %}">Login</a>
+            <a class="btn btn-primary " role="button" aria-disabled="true" href="{% url 'signin' %}">Login</a>
             {% endif %}
           </div>
       </div>
